...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextPhoneNumber"
        style="@style/etSolidRoundedOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_bg_white_a700_border_pink_500_radius_23_5"
...
        android:singleLine="true"
        android:textColorHint="@color/black_900_99"
        app:layout_constraintBottom_toTopOf="@+id/frameStackundrawwallpos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHomePage"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editHomePage"
        style="@style/etSolidRoundedOutline"
        android:layout_width="match_parent"
...
        android:singleLine="true"
        android:textColorHint="@color/black_900_99"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextName"
        style="@style/etSolidRoundedOutline"
        android:layout_width="match_parent"
...
            android:scaleType="fitXY"
            app:srcCompat="@drawable/img_undrawwallpos"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_undrawwallpos" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSave"
            style="@style/btnSolidRoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="@dimen/_85pxh"
            android:layout_marginTop="@dimen/_33pxv"
...
