<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/buttonAdminLogin"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="272dp"
        android:layout_weight="0.61"
        android:background="@drawable/rectangle_bg_pink_400_radius_25_08"
        android:drawableStart="@drawable/img_contrast"
        android:drawablePadding="@dimen/_4pxh"
        android:ellipsize="end"
        android:fontFamily="@font/archivo_black"
        android:hint="@string/lbl_browse_events"
        android:inputType="text"
        android:paddingStart="@dimen/_4pxh"
        android:paddingTop="@dimen/_16pxv"
        android:paddingEnd="@dimen/_27pxh"
        android:paddingBottom="@dimen/_17pxv"
        android:singleLine="true"
        android:text="ADMIN LOGIN"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white_A700"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearRowarrowleft"
        tools:ignore="Autofill" />

    <LinearLayout
        android:id="@+id/buttonScanQRCode"
        style="@style/groupStyleteal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/frameStackundrawcomplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPressToCheckIn"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textScanQRCode"
            style="@style/txtPoppinsbold17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_marginBottom="@dimen/_9pxv"
            android:layout_weight="0.83"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="Scan QR Code"
            tools:text="Scan QR Code" />

        <ImageView
            android:id="@+id/imageCamera"
            android:layout_width="@dimen/_25pxh"
            android:layout_height="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginBottom="@dimen/_12pxv"
            android:scaleType="fitXY"
            android:src="@drawable/img_camera"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_camera" />
    </LinearLayout>

    <TextView
        android:id="@+id/textPressToCheckIn"
        style="@style/txtPoppinsbold16"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="Press to Check in as attendee"
        app:layout_constraintBottom_toTopOf="@+id/buttonScanQRCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBrowseEvents"
        tools:text="Press to Check in as attendee" />

    <ImageView
        android:id="@+id/imageGearOne"
        app:srcCompat="@drawable/img_gear1"
        android:layout_width="136dp"
        android:layout_height="135dp"
        android:layout_gravity="start"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription"
        tools:src="@drawable/img_gear1" />

    <LinearLayout
        android:id="@+id/linearColumnsettingsorgan"
        style="@style/groupStyleblue_A200cornerRadius"
        android:layout_width="96dp"
        android:layout_height="89dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_18pxh"
        android:layout_marginVertical="@dimen/_18pxv"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtSettingsOrgan"
            style="@style/txtPoppinsbold11"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="@dimen/_2pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_1pxh"
            android:layout_marginBottom="@dimen/_21pxv"
            android:gravity="center_horizontal"
            android:text="Settings/ Organisors page"
            tools:text="Settings/ Organisors page" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameStackundrawcomplete"
        android:layout_width="184dp"
        android:layout_height="@dimen/_252pxv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageUndrawcomplete"
            app:srcCompat="@drawable/img_undrawdoneche"
            android:layout_width="148dp"
            android:layout_height="196dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_undrawdoneche" />


        <ImageView
            android:id="@+id/imageLogo"
            app:srcCompat="@drawable/img_result1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_result1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearRowarrowleft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearColumnarrowleft"
            android:layout_width="104dp"
            android:layout_height="164dp"
            android:layout_marginBottom="@dimen/_61pxv"
            android:layout_weight="0.61"
            android:gravity="start"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/buttonBack_QRScanningPage"
                style="@style/groupStyleteal_A200cornerRadius"
                android:layout_width="@dimen/_82pxh"
                android:layout_height="@dimen/_51pxv"
                android:layout_marginEnd="@dimen/_10pxh">

                <ImageView
                    android:id="@+id/imageArrowleft"
                    android:layout_width="@dimen/_23pxh"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_26pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_arrowleft" />
            </FrameLayout>

            <TextView
                android:id="@+id/buttonViewMyAttendeeEvents"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_34pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:background="@drawable/rectangle_bg_pink_400_radius_25_08"
                android:drawableStart="@drawable/img_contrast"
                android:drawablePadding="@dimen/_1pxh"
                android:ellipsize="end"
                android:fontFamily="@font/archivo_black"
                android:hint="@string/lbl_view_my_events"
                android:inputType="text"
                android:paddingStart="@dimen/_4pxh"
                android:paddingTop="@dimen/_17pxv"
                android:paddingEnd="@dimen/_11pxh"
                android:paddingBottom="@dimen/_16pxv"
                android:singleLine="true"
                android:text="View My Events"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/white_A700"
                android:textSize="15sp"
                tools:ignore="Autofill"
                android:clickable="true"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearColumnellipseone"
            android:layout_width="98dp"
            android:layout_height="199dp"
            android:layout_weight="0.39"
            android:gravity="end"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/view2"
                android:layout_width="172dp"
                android:layout_height="167dp"
                android:layout_centerHorizontal="true"
                android:innerRadius="0dp"
                android:thicknessRatio="1.9"
                app:cardCornerRadius="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/img_ellipse1_124x124"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_ellipse1_124x124" />

                <TextView
                    android:id="@+id/txtEditProfilePi"
                    style="@style/txtPoetsenOneregular13_1"
                    android:layout_width="168dp"
                    android:layout_height="89dp"
                    android:layout_marginTop="100sp"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="top|center"
                    android:text="Edit Profile"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Edit Profile" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/buttonBrowseEvents"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="0.61"
        android:background="@drawable/rectangle_bg_pink_400_radius_25_08"
        android:drawableStart="@drawable/img_contrast"
        android:drawablePadding="@dimen/_4pxh"
        android:ellipsize="end"
        android:fontFamily="@font/archivo_black"
        android:hint="@string/lbl_browse_events"
        android:inputType="text"
        android:paddingStart="@dimen/_4pxh"
        android:paddingTop="@dimen/_16pxv"
        android:paddingEnd="@dimen/_27pxh"
        android:paddingBottom="@dimen/_17pxv"
        android:singleLine="true"
        android:text="Browse Events"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white_A700"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearRowarrowleft"
        tools:ignore="Autofill"
        android:clickable="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>